...
    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.markchapterscompleted.MarkChaptersCompletedViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mark_chapters_completed_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_primary_background_color">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/mark_chapters_completed_app_bar_layout"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mark_chapters_completed_all_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
          android:id="@+id/mark_chapters_completed_mark_completed_text_view"
          style="@style/Heading5ViewCenterVertical"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:minWidth="48dp"
          android:minHeight="48dp"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/mark_chapters_completed_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mark_chapters_completed_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/component_color_shared_screen_tertiary_background_color"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="40dp"
...
